# fairscope

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
cpfe/: index.html
docs/: DESIGN.md  api.md  cpfe.md  federated.md  getting-started.md  healthcare.md  index.md  lending.md  planned-issues.md
fairscope/: __init__.py
fairscope/core/: __init__.py  _utils.py  bootstrap.py  calibration.py  correction.py  delong.py  metrics.py
fairscope/federated/: __init__.py  audit.py
fairscope/healthcare/: __init__.py  audit.py
fairscope/lending/: __init__.py  audit.py
fairscope/nlp/: __init__.py  attribution.py  cross_platform.py  metrics.py  significance.py
getting-started/: index.html
healthcare/: index.html
notebooks/: 01_healthcare_replication.ipynb  02_nlp_cpfe_demo.ipynb  03_lending_replication.ipynb  04_federated_replication.ipynb
paper/: cpfe_demo.py  paper.md  paper.tex
search/: search_index.json
tests/: test_bootstrap.py  test_calibration.py  test_core_api.py  test_correction.py  test_delong.py  test_dispatch.py  test_federated.py  test_healthcare.py  test_lending.py  test_metrics.py  test_nlp_api.py  test_nlp_attribution.py  test_nlp_cpfe.py  test_nlp_metrics.py  test_nlp_significance.py  test_utils.py  test_version.py
tests/fixtures/: README.md  _generate_healthcare_fixture.py  _generate_lending_fixture.py  healthcare_subsample.csv  lending_subsample.csv
